yaml-kubernetes/aboutpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aboutpage-apps
  labels:
    app: aboutpage-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aboutpage-apps
  template:
    metadata:
      labels:
        app: aboutpage-apps
    spec:
      containers:
        - name: aboutpage-apps
          image: ghcr.io/tjandikaputra/kubernetes-starter-deployment:aboutpage
          ports:
          - name : port-http
            containerPort: 80
            protocol: TCP
