yaml-kubernetes/homepage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-apps
  labels:
    app: homepage-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homepage-apps
  template:
    metadata:
      labels:
        app: homepage-apps
    spec:
      containers:
        - name: homepage-apps
          image: ghcr.io/tjandikaputra/kubernetes-starter-deployment:homepage
          ports:
          - name : port-http
            containerPort: 80
            protocol: TCP
