yaml-kubernetes/aboutpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aboutpage-apps
  labels:
    run: aboutpage-apps
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30031
    protocol: TCP
  selector:
    app: aboutpage-apps
