yaml-kubernetes/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-apps
  labels:
    run: homepage-apps
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30030
    protocol: TCP
  selector:
    app: homepage-apps
